update ResourceChooser